# jst

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  MODEL_BENCHMARKS.md  PROJECT_BRIEF.md  README.md  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml  pages.yml  pr-preview-comment.yml  pr-preview.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cache.rs  cli_args.rs  installation.rs  main.rs  safety.rs
crates/cli/tests/: confirmation_output.rs
crates/server/: Cargo.toml
crates/server/examples/: benchmark_models.md  benchmark_models.rs  prompt_autoresearch.md  prompt_autoresearch.rs
crates/server/src/: main.rs  mistral.rs  openai_compatible.rs  openrouter.rs  rate_limit.rs  stats.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  prompt.rs  types.rs
docs/: CNAME  index.html  phi-4-prompting-research.md  script.js  site.webmanifest  styles.css
scripts/: build-macos-release.sh  interactive-dev.sh  render-homebrew-formula.sh  sign-and-notarize-macos.sh
