[package]
name = "jst-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "jst"
path = "src/main.rs"

[dependencies]
jst-shared = { path = "../shared" }
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
clap = { version = "4", features = ["derive"] }
regex = "1"
getrandom = "0.3"
crossterm = "0.28"
