[package]
name = "jst-server"
version = "0.1.0"
edition = "2021"

[dependencies]
jst-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
